--- a/portfolio-details-2.html
+++ b/portfolio-details-2.html
@@ -51,11 +51,11 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-2.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-2_2.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-2_2.webp" alt="" loading="lazy">
                 </div>
 
               </div>
@@ -68,9 +68,9 @@
               <h4>ABRSM</h4>
               <ul>
                 <li><strong>Student</strong>: Shih-Ching, Hung</li>
-                <li><strong>Piano Performance</strong>: Grade 8 (2021) <a href="assets/img/portfolio/grade8.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 8 Piano Performance"><i class="bx bx-plus"></i></a></li>
+                <li><strong>Piano Performance</strong>: Grade 8 (2021) <a href="assets/img/portfolio/grade8.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 8 Piano Performance"><i class="bx bx-plus"></i></a></li>
                 <!-- <li><strong>Piano Performance</strong>: Grade 8 (2021)</li> -->
-                <li><strong>Music Theory</strong>: Grade 5 (2018) <a href="assets/img/portfolio/grade5.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 5 Music Theory"><i class="bx bx-plus"></i></a></li>
+                <li><strong>Music Theory</strong>: Grade 5 (2018) <a href="assets/img/portfolio/grade5.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="ABRSM<br>- Grade 5 Music Theory"><i class="bx bx-plus"></i></a></li>
                 <li><strong>Teacher</strong>: Hsing-Ju, Tsai</li>
               </ul>
             </div>
@@ -112,3 +112,4 @@
 </body>
 
 </html>
+
