--- a/portfolio-details-6.html
+++ b/portfolio-details-6.html
@@ -51,31 +51,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-6.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-6.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-6_2.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-6_2.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-6_3.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-6_3.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-6_4.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-6_4.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-6_5.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-6_5.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-6_6.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-6_6.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-6_7.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-6_7.webp" alt="" loading="lazy">
                 </div>
 
               </div>
@@ -121,3 +121,4 @@
 </body>
 
 </html>
+
