--- a/portfolio-details-9.html
+++ b/portfolio-details-9.html
@@ -51,23 +51,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_2.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-9_2.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_3.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-9_3.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_4.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-9_4.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_5.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-9_5.webp" alt="" loading="lazy">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_6.webp" alt="">
+                  <img src="assets/img/portfolio/portfolio-details-9_6.webp" alt="" loading="lazy">
                 </div>
 
               </div>
@@ -117,3 +117,4 @@
 </body>
 
 </html>
+
