--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>資料結構與演算法課程 教學助理</h4>
-              <h5>Sep 2024 - Dec 2024</h5>
+              <h5>Sep 2024 - Jun 2025</h5>
               <p><em>長庚大學</em></p>
             </div>
             <div class="resume-item">
@@ -217,7 +217,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Intelligent Toilet</h4>
                 <p>第28屆大專院校資訊應用服務創新競賽</p>
@@ -231,7 +231,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Piano Certificate</h4>
                 <p>ABRSM Grade 8 Piano Performance</p>
@@ -245,7 +245,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Intelligent Toilet</h4>
                 <p>第7屆創創AIoT競賽</p>
@@ -260,7 +260,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>HK 🇭🇰</h4>
                 <p>2023</p>
@@ -274,7 +274,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>櫃檯人員</h4>
                 <p>廣達電腦員工休閒活動中心 - 康達館</p>
@@ -289,7 +289,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>高中畢業典禮 🎓</h4>
                 <p>2020.06.15</p>
@@ -303,7 +303,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-project">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Intelligent Toilet</h4>
                 <p>112學年度資訊工程學系暨人工智慧學士學位學程聯合畢業專題展</p>
@@ -317,7 +317,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>大學畢業典禮 🎓</h4>
                 <p>2024.06.01</p>
@@ -330,7 +330,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-9.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Hiking ⛰️</h4>
                 <p></p>
@@ -342,7 +342,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-work">
+<!--           <div class="col-lg-4 col-md-6 portfolio-item filter-work">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-10.gif" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -355,11 +355,11 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-11.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-11.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>綠島 🏝️</h4>
                 <p></p>
@@ -373,7 +373,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-life">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-12.webp" class="img-fluid" alt="" loading="lazy">
+              <img src="assets/img/portfolio/portfolio-12.webp" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>漁光島 🏝️</h4>
                 <p></p>
@@ -577,6 +577,7 @@
 </body>
 
 </html>
+
 
 
 
