--- a/portfolio-details-12.html
+++ b/portfolio-details-12.html
@@ -51,23 +51,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-12_2.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-12_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-12_3.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-12_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-12_4.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-12_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-12_5.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-12_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-12_6.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-12_6.webp" alt="">
                 </div>
 
               </div>
@@ -113,4 +113,5 @@
 </body>
 
 </html>
+
 
