--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -51,35 +51,35 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_2.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_3.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_4.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_5.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_6.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_6.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_7.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_7.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_8.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_8.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-3_9.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-3_9.webp" alt="">
                 </div>
 
               </div>
@@ -94,10 +94,10 @@
                 <li><strong>Professor</strong>: 張哲維</li>
                 <li><strong>Student</strong>: 洪詩晴、盧于璇、吳冠諭、趙君熙</li>
                 <li><strong>Introduction Video</strong>: <a href="https://youtu.be/HLnQyVk6eM4?si=DZ3m5Ya6BhPRcrC7" target="_blank">Demo</a></li>
-                <li><strong>Award</strong>: <br>永續科技組 第一名 <a href="assets/img/portfolio/aiot_1st_en.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"><i class="bx bx-plus"></i></a>
-                  <a href="assets/img/portfolio/aiot_1st.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"></a>
-                  <br>貿澤電子 企業獎 <a href="assets/img/portfolio/aiot_enterprise_en.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"><i class="bx bx-plus"></i></a>
-                  <a href="assets/img/portfolio/aiot_enterprise.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"></a></li>
+                <li><strong>Award</strong>: <br>永續科技組 第一名 <a href="assets/img/portfolio/aiot_1st_en.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/aiot_1st.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 第一名"></a>
+                  <br>貿澤電子 企業獎 <a href="assets/img/portfolio/aiot_enterprise_en.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/aiot_enterprise.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第7屆創創AIoT競賽 永續科技組 貿澤電子 企業獎"></a></li>
                 <li><strong>Date</strong>: 13 Jul, 2023</li>
               </ul>
             </div>
@@ -137,4 +137,5 @@
 </body>
 
 </html>
+
 
