--- a/portfolio-details-4.html
+++ b/portfolio-details-4.html
@@ -51,31 +51,31 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_2.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_3.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_4.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_5.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_6.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_6.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_7.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_7.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-4_8.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-4_8.webp" alt="">
                 </div>
 
               </div>
@@ -122,4 +122,5 @@
 </body>
 
 </html>
+
 
