--- a/portfolio-details-7.html
+++ b/portfolio-details-7.html
@@ -51,23 +51,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7_2.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-7_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7_3.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-7_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7_4.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-7_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7_5.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-7_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-7_6.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-7_6.webp" alt="">
                 </div>
 
               </div>
@@ -82,8 +82,8 @@
                 <li><strong>Professor</strong>: 張哲維</li>
                 <li><strong>Student</strong>: 洪詩晴、盧于璇、吳冠諭、趙君熙</li>
                 <li><strong>Introduction Video</strong>: <a href="https://youtu.be/HLnQyVk6eM4?si=DZ3m5Ya6BhPRcrC7" target="_blank">Demo</a></li>
-                <li><strong>Award</strong>: <br>第三名 <a href="assets/img/portfolio/aiot_1st_en.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="112學年度資訊工程學系暨人工智慧學士學位學程聯合畢業專題展 第三名"><i class="bx bx-plus"></i></a>
-                  <br>最佳人氣獎 <a href="assets/img/portfolio/aiot_enterprise_en.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="112學年度資訊工程學系暨人工智慧學士學位學程聯合畢業專題展 最佳人氣獎"><i class="bx bx-plus"></i></a></li>
+                <li><strong>Award</strong>: <br>第三名 <a href="assets/img/portfolio/aiot_1st_en.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="112學年度資訊工程學系暨人工智慧學士學位學程聯合畢業專題展 第三名"><i class="bx bx-plus"></i></a>
+                  <br>最佳人氣獎 <a href="assets/img/portfolio/aiot_enterprise_en.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="112學年度資訊工程學系暨人工智慧學士學位學程聯合畢業專題展 最佳人氣獎"><i class="bx bx-plus"></i></a></li>
                 <li><strong>Date</strong>: 05 Dec, 2023</li>
               </ul>
             </div>
@@ -123,4 +123,5 @@
 </body>
 
 </html>
+
 
