--- a/portfolio-details-8.html
+++ b/portfolio-details-8.html
@@ -51,51 +51,51 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-8.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-8.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_2.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_3.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_4.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_5.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_6.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_6.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_7.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_7.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_8.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_8.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_9.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_9.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_10.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_10.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_11.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_11.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-8_12.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-8_12.webp" alt="">
                 </div>
 
               </div>
@@ -141,4 +141,5 @@
 </body>
 
 </html>
+
 
