--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.webp" class="img-fluid" alt="" loading="lazy">
+            <img src="assets/img/profile-img.webp" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Welcome to my website</h3>
@@ -150,7 +150,7 @@
               <h4>大園國際高中 普通科</h4>
               <h5>Sep 2017 - Jun 2020</h5>
               <p><em>數理專長班</em></p>
-              <p><em>西班牙語 </em><a href="assets/img/portfolio/espanol.webp" loading="lazy" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第二外語能力測驗 SFLPT<br>西班牙語 | A1 合格"><i class="bx bx-plus"></i></a></p>
+              <p><em>西班牙語 </em><a href="assets/img/portfolio/espanol.webp" data-gallery="portfolioGallery" class="portfolio-lightbox" title="第二外語能力測驗 SFLPT<br>西班牙語 | A1 合格"><i class="bx bx-plus"></i></a></p>
             </div>
           </div>
           <div class="col-lg-6">
@@ -577,6 +577,7 @@
 </body>
 
 </html>
+
 
 
 
