--- a/portfolio-details-9.html
+++ b/portfolio-details-9.html
@@ -51,23 +51,27 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_2.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-9_2.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_3.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-9_3.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_4.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-9_4.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_5.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-9_5.webp" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-details-9_6.webp" alt="" loading="lazy">
+                  <img src="assets/img/portfolio/portfolio-details-9_6.webp" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/portfolio-details-9_7.webp" alt="">
                 </div>
 
               </div>
@@ -80,6 +84,7 @@
               <h4>Hiking ⛰️</h4>
               <ul>
                 <li><strong>📍 牛頭山</strong></li>
+                <li><strong>📍 抹茶山</strong></li>
                 <li><strong>📍 五酒桶山</strong></li>
                 <li><strong>📍 羊稠森林步道</strong></li>
                 <li><strong>📍 林美石磬步道</strong></li>
@@ -117,4 +122,5 @@
 </body>
 
 </html>
+
 
