--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
               </div>
             </div>
             <p>
-              大家好，我是洪詩晴，目前就讀於長庚大學資訊工程碩士班。歡迎來到我的個人網站！平時我喜歡看劇、看電影、唱歌、彈鋼琴，有假期時，喜歡旅行、聽音樂會或演唱會和看球賽。
-              在這裡，我將分享我的基本資料、打工經歷、取得的證照、作品集，以及高中和大學的生活點滴。希望大家會喜歡，謝謝！<br><br>
-              Hello, everyone! I'm Shih-Ching Hung, a master's student in Computer Science and Information Engineering at Chang Gung University. 
-              Welcome to my personal website! In my free time, I love watching dramas and movies, singing, and playing the piano. When I have a break, 
-              I enjoy traveling, going to concerts and sports games. Here, you'll find my personal information, part-time job experiences, certifications, portfolio, 
-              and some memorable moments from my high school and college years. I hope you guys enjoy your visit. Thank you!
+              大家好，我是洪詩晴，目前就讀於長庚大學資訊工程碩士班。歡迎來到我的個人網站！<br>
+              平時我喜歡看劇、看電影、唱歌、彈鋼琴，放假時喜歡旅行、聽音樂會或演唱會和看球賽。<br>
+              在這裡與大家分享我的基本資料、打工經歷、取得的證照、作品集，以及高中和大學的生活點滴。希望你們會喜歡，謝謝！<br><br>
+              Hello, everyone! I'm Poesy, a master's student in Computer Science and Information Engineering at Chang Gung University. Welcome to my personal website!<br>
+              In my free time, I enjoy watching dramas and movies, singing, and playing the piano. During holidays, I love traveling, attending concerts or live performances, and watching sports games.<br>
+              On this site, you’ll find my personal background, part-time job experiences, certifications, portfolio, and some highlights from my high school and college life.<br>
+              hope you guys enjoy your visit. Thank you!
             </p>
           </div>
         </div>
@@ -577,6 +578,7 @@
 </body>
 
 </html>
+
 
 
 
