--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             <p>
               大家好，我是洪詩晴，目前就讀於長庚大學資訊工程碩士班。歡迎來到我的個人網站！<br>
               平時我喜歡看劇、看電影、唱歌、彈鋼琴，放假時喜歡旅行、聽音樂會或演唱會和看球賽。<br>
-              在這裡與大家分享我的基本資料、打工經歷、取得的證照、作品集，以及高中和大學的生活點滴。希望你們會喜歡，謝謝！<br><br>
+              在這裡與大家分享我的基本資料、打工經歷、取得的證照、作品集，以及高中和大學的生活點滴。<br>
+              希望你們會喜歡，謝謝！<br><br>
               Hello, everyone! I'm Poesy, a master's student in Computer Science and Information Engineering at Chang Gung University. Welcome to my personal website!<br>
               In my free time, I enjoy watching dramas and movies, singing, and playing the piano. During holidays, I love traveling, attending concerts or live performances, and watching sports games.<br>
               On this site, you’ll find my personal background, part-time job experiences, certifications, portfolio, and some highlights from my high school and college life.<br>
@@ -578,6 +579,7 @@
 </body>
 
 </html>
+
 
 
 
