--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <h3 class="resume-title">Experience</h3>
             <div class="resume-item">
               <h4>資料結構與演算法課程 教學助理</h4>
-              <h5>Sep 2024 - Jun 2025</h5>
+              <h5>Sep 2024 - Present</h5>
               <p><em>長庚大學</em></p>
             </div>
             <div class="resume-item">
@@ -579,6 +579,7 @@
 </body>
 
 </html>
+
 
 
 
